--- a/views/calculoBasadoDias.html
+++ b/views/calculoBasadoDias.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu Tarjeta</title>
-    <link rel="stylesheet" href="/calculoBasadoDias.css">
+    <link rel="stylesheet" href="/css/calculoBasadoDias.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Protest+Strike&display=swap" rel="stylesheet">
@@ -16,24 +16,27 @@
         <div class="column">
             <div class="card">
                 <div class="card-info">
-                    <h2>CÁLCULO SEGÚN CANTIDAD DE DÍAS DE OPERACIÓN</h2>
                 <form>
-                    <label class="text">PROCESO</label>
+                    <h1>Calculo Según Cantidad De Días De Operación</h1>
+                    <label class="text">PROCESO:</label>
                     <select class="custom-select">
                         <option value=""></option>
                         <option value="dog">Dog</option>
                         <option value="cat">Cat</option>
                     </select>
-                    <label >CANTIDAD A PROCESAR</label>
-                    <input type="text" class="custom-input">
-                    <label >CANTIDAD DE RECURSOS</label>
-                    <input type="text" class="custom-input">
-                    <label >LUGAR DE EJECUCION</label>
+                    <label >CANTIDAD A PROCESAR:</label>
+                    <input type="text" class="custom-input" placeholder="Ingrese cantidad de procesos">
+                    <label >CANTIDAD DE RECURSOS:</label>
+                    <input type="text" class="custom-input" placeholder="Ingrese cantidad de recursos">
+                    <label >UNIDAD DE MEDIDA:</label>
+                    <input type="text" class="custom-input" placeholder="Ingrese unidad de medida">
+                    <label >LUGAR DE EJECUCION:</label>
                     <select class="custom-select">
                         <option value=""></option>
                         <option value="dog">Dog</option>
                         <option value="cat">Cat</option>
                     </select>
+                    <button class="botoncalcular">CALCULAR</button>
                 </form>
                 </div>
               </div>
