--- a/css/calculoBasadoDias.css
+++ b/css/calculoBasadoDias.css
@@ -27,9 +27,10 @@ body {
 }
 
 .container {
-    display: grid;
-    grid-template-columns: 2fr 8fr 2fr; 
-    grid-gap: 10px; /* Espacio entre columnas */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Opcional: ajusta la altura de la tarjeta según tu diseño */
 }
 
 .card {
@@ -162,6 +163,53 @@ h1{
         font-size: 24px;
         font-family: 'Protest Strike', sans-serif;
         text-align: center;
+    }
+
+}
+
+@media only screen and (max-width: 600px) {
+
+    .card {
+        background-color: #fff;
+        border-radius: 6px;
+        overflow: hidden;
+        width: 300px;
+        height: 500px;
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    }
+    
+    .card-info {
+        margin-top: 0px;
+        font-size: 18px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+    
+    .card-info form {
+        display: flex;
+        flex-direction: column;
+    }
+
+    form{
+        margin-top: 20px;
+        width: 80%;
+        flex: content;
+        font-family: 'Poppins', sans-serif;
+        font-size: 12px;
+    }
+    
+    h1{
+        color: black;
+        font-size: 20px;
+        font-family: 'Protest Strike', sans-serif;
+        text-align: center;
+    }
+
+    .card-info .botoncalcular{
+        margin-top: 0px;
+        width: 100%; /* Establece el ancho de los inputs al 100% */
     }
 
 }
