--- a/css/login_iconos.css
+++ b/css/login_iconos.css
@@ -10,22 +10,21 @@
     --blue-bayoux-950: #080d28;    
 }
 
-* {
+*{
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
-body {
+body{
     align-items: center;
-    text-align: center;
     background-color: var(--blue-bayoux-100);
     display: flex;
     height: 100vh;
     justify-content: center;
 }
 
-.container {
+.container{
     background: #fff;
     border-radius: 10px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
@@ -37,41 +36,41 @@ body {
     width: 100%;
 }
 
-.container .forms {
+.container .forms{
     align-items: center;
     display: flex;
+    height: 440px;
     transition: height 0.2s ease;
     width: 200%;
 }
 
-.container .form {
+
+.container .form{
     background-color: #fff;
     padding: 30px;
     transition: margin-left 0.18s ease;
     width: 50%;
 }
 
-.container.active .login {
+.container.active .login{
     transition: margin-left 0.18s ease, opacity 0.15s ease;
     margin-left: -50%;
     opacity: 0;
 }
 
-.container .signup {
+.container .signup{
     transition: opacity 0.09s ease;
     opacity: 0;
 }
-
-.container.active .signup {
+.container.active .signup{
     transition: opacity 0.2s ease;
     opacity: 1;
 }
 
-.container.active .forms {
+.container.active .forms{
     height: 600px;
 }
-
-.container .form .title {
+.container .form .title{
     font-family: 'Protest Riot', sans-serif;
     font-family: 'Protest Strike', sans-serif;
     font-size: 27px;
@@ -79,7 +78,7 @@ body {
     position: relative;
 }
 
-.form .title::before {
+.form .title::before{
     background-color: var(--blue-bayoux-700);
     border-radius: 25px;
     bottom: 0;
@@ -89,7 +88,7 @@ body {
     width: 30px;
 }
 
-.form .input-field {
+.form .input-field{
     position: relative;
     height: 50px;
     margin-top: 30px;
@@ -99,7 +98,8 @@ body {
     width: 100%;
 }
 
-.input-field input {
+
+.input-field input{
     border-bottom: 2px solid #ccc;
     border-top: 2px solid transparent;
     height: 100%;
@@ -111,11 +111,11 @@ body {
     width: 100%;
 }
 
-.input-field input:is(:focus, :valid) {
+.input-field input:is(:focus, :valid){
     border-bottom-color: var(--blue-bayoux-700);
 }
 
-.input-field i {
+.input-field i{
     color: #999;
     top: 50%;
     transform: translateY(-50%);
@@ -124,22 +124,21 @@ body {
     position: absolute;
 }
 
-.input-field input:is(:focus, :valid) ~ i {
+.input-field input:is(:focus, :valid) ~ i{
     color: var(--blue-bayoux-700);
 }
 
-.input-field i.icon {
+.input-field i.icon{
     left: 0;
 }
-
-.input-field i.showHidePw {
+.input-field i.showHidePw{
     cursor: pointer;
     display: block;
     padding: 10px;
     right: 0;
 }
 
-.form .checkbox-text {
+.form .checkbox-text{
     align-items: center;
     display: flex;
     margin-top: 15px;
@@ -147,52 +146,49 @@ body {
     justify-content: space-between;
 }
 
-.checkbox-text .checkbox-content {
+.checkbox-text .checkbox-content{
     align-items: center;
     display: flex;
 }
 
-.checkbox-content input {
+.checkbox-content input{
     accent-color: var(--blue-bayoux-700);
     margin-right: 10px;
 }
 
-.form .text { 
+.form .text{ 
     font-size: 14px;
 }
 
-.form a.text {
+.form a.text{
     color: var(--blue-bayoux-700);
     text-decoration: none;
 }
-
-.form a:hover {
+.form a:hover{
     text-decoration: underline;
 }
 
-.form .button {
-    margin-top: 20px; 
+.form .button{
+    margin-top: 35px;
 }
 
-.form .button input {
-    padding: 6px 10px;
-    font-size: 14px; 
-    letter-spacing: 0.5px; 
+.form .button input{
     border-radius: 6px;
     background-color: var(--blue-bayoux-700);
     border: none;
     color: #fff;
     cursor: pointer;
+    font-size: 17px;
     font-weight: 500;
+    letter-spacing: 1px;
     transition: all 0.3s ease;
 }
 
-.button input:hover {
+.button input:hover{
     background-color: var(--blue-bayoux-700);
-    color: var(--blue-bayoux-200);
 }
 
-.form .login-signup {
+.form .login-signup{
     margin-top: 30px;
     text-align: center;
 }
