--- a/views/gestion_user.html
+++ b/views/gestion_user.html
@@ -1,191 +1,193 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestión de Usuarios</title>
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="/css/gestion_user.css">
-    <!-- libreria de google -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Protest+Strike&display=swap" rel="stylesheet">
-</head>
-<body>
-    <div class="contenedor">
-        <h1>Gestión de Usuarios</h1>
-        <div class="buscador">
-            <input type="text" placeholder="Buscar usuario...">
-            <button class="buscador-btn">Buscar</button>
-        </div>
-        <table class="tabla">
-            <thead>
-                <tr>
-                    <th>Nombre</th>
-                    <th>Contraseña</th>
-                    <th>Estado</th>
-                    <th>opciones</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Nombre del Usuario</td>
-                    <td>Contraseña</td>
-                    <td>Activo</td>
-                    <td>
-                        <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
-                        <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Nombre del Usuario</td>
-                    <td>Contraseña</td>
-                    <td>Activo</td>
-                    <td>
-                        <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
-                        <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Nombre del Usuario</td>
-                    <td>Contraseña</td>
-                    <td>Activo</td>
-                    <td>
-                        <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
-                        <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Nombre del Usuario</td>
-                    <td>Contraseña</td>
-                    <td>Activo</td>
-                    <td>
-                        <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
-                        <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Nombre del Usuario</td>
-                    <td>Contraseña</td>
-                    <td>Activo</td>
-                    <td>
-                        <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
-                        <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Nombre del Usuario</td>
-                    <td>Contraseña</td>
-                    <td>Activo</td>
-                    <td>
-                        <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
-                        <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Nombre del Usuario</td>
-                    <td>Contraseña</td>
-                    <td>Activo</td>
-                    <td>
-                        <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
-                        <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
-                    </td>
-                </tr><tr>
-                    <td>Nombre del Usuario</td>
-                    <td>Contraseña</td>
-                    <td>Activo</td>
-                    <td>
-                        <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
-                        <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Nombre del Usuario</td>
-                    <td>Contraseña</td>
-                    <td>Activo</td>
-                    <td>
-                        <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
-                        <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Nombre del Usuario</td>
-                    <td>Contraseña</td>
-                    <td>Activo</td>
-                    <td>
-                        <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
-                        <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Nombre del Usuario</td>
-                    <td>Contraseña</td>
-                    <td>Activo</td>
-                    <td>
-                        <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
-                        <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Nombre del Usuario</td>
-                    <td>Contraseña</td>
-                    <td>Activo</td>
-                    <td>
-                        <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
-                        <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Nombre del Usuario</td>
-                    <td>Contraseña</td>
-                    <td>Activo</td>
-                    <td>
-                        <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
-                        <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-        <div class="pagination">
-            <button class="anterior"><i class='bx bx-chevron-left'></i>Anterior</button>
-            <span class="pagina-inf">Página 1 de 3</span>
-            <button class="siguiente">Siguiente<i class='bx bx-chevron-right'></i></button>
-        </div>
-        <div class="add-user">
-            <button class="add-user-btn"><i class='bx bx-user'></i>Añadir Usuario</button>
-        </div>
-    </div>
-    <div id="modal-eliminar" class="modal">
-        <div class="eliminar-modal">
-            <span class="cerrar">&times;</span>
-            <h2>¿Estás seguro que deseas eliminar este usuario?</h2>
-            <div class="modal-botones">
-                <button class="cancelar">Cancelar</button>
-                <button class="confirmar-eliminar">Confirmar</button>
+    <!DOCTYPE html>
+    <html lang="es">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Gestión de Usuarios</title>
+        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+        <link rel="stylesheet" href="/css/gestion_user.css">
+        <!-- libreria de google -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Protest+Strike&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <div class="contenedor">
+            <h1>Gestión de Usuarios</h1>
+            <div class="buscador">
+                <input type="text" placeholder="Buscar usuario...">
+                <button class="buscador-btn">Buscar</button>
+            </div>
+            <table class="tabla">
+                <thead>
+                    <tr>
+                        <th>Nombre</th>
+                        <th>Contraseña</th>
+                        <th>Estado</th>
+                        <th>opciones</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Nombre del Usuario</td>
+                        <td>Contraseña</td>
+                        <td>Activo</td>
+                        <td>
+                            <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
+                            <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Nombre del Usuario</td>
+                        <td>Contraseña</td>
+                        <td>Activo</td>
+                        <td>
+                            <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
+                            <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Nombre del Usuario</td>
+                        <td>Contraseña</td>
+                        <td>Activo</td>
+                        <td>
+                            <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
+                            <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Nombre del Usuario</td>
+                        <td>Contraseña</td>
+                        <td>Activo</td>
+                        <td>
+                            <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
+                            <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Nombre del Usuario</td>
+                        <td>Contraseña</td>
+                        <td>Activo</td>
+                        <td>
+                            <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
+                            <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Nombre del Usuario</td>
+                        <td>Contraseña</td>
+                        <td>Activo</td>
+                        <td>
+                            <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
+                            <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Nombre del Usuario</td>
+                        <td>Contraseña</td>
+                        <td>Activo</td>
+                        <td>
+                            <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
+                            <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
+                        </td>
+                    </tr><tr>
+                        <td>Nombre del Usuario</td>
+                        <td>Contraseña</td>
+                        <td>Activo</td>
+                        <td>
+                            <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
+                            <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Nombre del Usuario</td>
+                        <td>Contraseña</td>
+                        <td>Activo</td>
+                        <td>
+                            <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
+                            <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Nombre del Usuario</td>
+                        <td>Contraseña</td>
+                        <td>Activo</td>
+                        <td>
+                            <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
+                            <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Nombre del Usuario</td>
+                        <td>Contraseña</td>
+                        <td>Activo</td>
+                        <td>
+                            <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
+                            <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Nombre del Usuario</td>
+                        <td>Contraseña</td>
+                        <td>Activo</td>
+                        <td>
+                            <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
+                            <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Nombre del Usuario</td>
+                        <td>Contraseña</td>
+                        <td>Activo</td>
+                        <td>
+                            <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
+                            <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            <div class="pagination">
+                <button class="anterior"><i class='bx bx-chevron-left'></i>Anterior</button>
+                <span class="pagina-inf">Página 1 de 3</span>
+                <button class="siguiente">Siguiente<i class='bx bx-chevron-right'></i></button>
+            </div>
+            <div class="add-user">
+                <button class="add-user-btn"><i class='bx bx-user'></i>Añadir Usuario</button>
             </div>
         </div>
-    </div>
-    <div id="modal-modificar" class="modal">
-        <div class="modal-contenido modificar-modal">
-            <span class="cerrar">&times;</span>
-            <h2>Modificar usuario</h2>
-            <form class="form_content">
-                <label for="nombre">Nombre:</label>
-                <input type="text" class="inputDate" id="nombre" name="nombre" value="Nombre del Usuario">
-                <label for="contraseña">Contraseña:</label>
-                <input type="password" class="inputDate" id="contraseña" name="contraseña">
-                <label for="estado">Estado:</label>
-                <select id="estado" name="estado" class="selectDate">
-                    <option value="activo">Activo</option>
-                    <option value="inactivo">Inactivo</option>
-                </select>
+        <div id="modal-eliminar" class="modal">
+            <div class="eliminar-modal">
+                <span class="cerrar">&times;</span>
+                <h2>¿Estás seguro que deseas eliminar este usuario?</h2>
                 <div class="modal-botones">
-                    <button class="cancelar_md">Cancelar</button>
-                    <button class="guardar-modificacion">Guardar</button>
+                    <button class="cancelar">Cancelar</button>
+                    <button class="confirmar-eliminar">Confirmar</button>
                 </div>
-            </form>
+            </div>
         </div>
-    </div>
-    <script src="/js/modales.js"></script>
-</body>
-</html>
+        <div id="modal-modificar" class="modal">
+            <div class="modal-contenido modificar-modal">
+                <span class="cerrar">&times;</span>
+                <h2>Modificar usuario</h2>
+                <form class="form_content">
+                    <label for="nombre">Nombre:</label>
+                    <input type="text" class="inputDate" id="nombre" name="nombre" value="Nombre del Usuario">
+                    <label for="contraseña">Contraseña:</label>
+                    <div class="input-container">
+                        <input type="password" class="inputDate" id="contraseña" name="contraseña">
+                    <i class='bx bx-hide'></i> <!-- Icono de ojo -->
+                    </div><label for="estado">Estado:</label>
+                    <select id="estado" name="estado" class="selectDate">
+                        <option value="activo">Activo</option>
+                        <option value="inactivo">Inactivo</option>
+                    </select>
+                    <div class="modal-botones">
+                        <button class="cancelar_md">Cancelar</button>
+                        <button class="guardar-modificacion">Guardar</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <script src="/js/modales.js"></script>
+    </body>
+    </html>
