--- a/views/recuperacio.html
+++ b/views/recuperacio.html
@@ -1,31 +1,54 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cambio de Contraseña</title>
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <link rel="stylesheet" href="/css/recuperacion.css">
-  <!-- libreria de google -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Protest+Strike&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <title>Cambio de Contraseña</title>
 </head>
 <body>
     <div class="container">
-        <h2>Cambio de Contraseña</h2> <!-- Título arriba del formulario -->
-        <form action="procesar_cambio.php" method="post">
-            <label for="correo">Correo Electrónico:</label><br>
-            <input type="email" id="correo"  name="correo" required><br><br>
-            
-            <label for="nueva_clave">Nueva Contraseña:</label><br>
-            <input type="password" id="nueva_clave" name="nueva_clave" required><br><br>
-
-            <label for="confirmar_clave">Confirmar Contraseña:</label><br>
-            <input type="password" id="confirmar_clave" name="confirmar_clave" required><br><br>
-            
-            <input type="submit" value="Cambiar Contraseña">    
-        </form>
+        <div class="forms">
+            <div class="form login">
+                <span class="title">Cambio de Contraseña</span>
+                <form action="#">
+                    <div class="input-field">
+                        <input type="text" placeholder="Usuario" required>
+                        <i class="uil uil-user icon"></i>
+                    </div>
+                    <div class="input-field">
+                        <input type="password" id="input" class="password" placeholder="Contraseña Actual" required>
+                        <i class="uil uil-lock icon"></i>
+                        <i class="uil uil-eye-slash showHidePw"></i>
+                        <i class="material-symbols-outlined eye_open"></i>
+                    </div>
+                    <div class="input-field">
+                        <input type="password" id="input" class="password" placeholder="Nueva Contraseña" required>
+                        <i class="uil uil-lock icon"></i>
+                        <i class="uil uil-eye-slash showHidePw"></i>
+                        <i class="material-symbols-outlined eye_open"></i>
+                    </div>
+                    <div class="input-field">
+                        <input type="password" id="input" class="password" placeholder="Confirmar Nueva Contraseña" required>
+                        <i class="uil uil-lock icon"></i>
+                        <i class="uil uil-eye-slash showHidePw"></i>
+                        <i class="material-symbols-outlined eye_open"></i>
+                    </div>
+                    <div class="input-field  button">
+                        <input type="button" value="Cambiar Contraseña">
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
+    <script src="/js/cambio_contraseña.js"></script>
 </body>
 </html>
+
+
