Vista Resultado De Calculo Corrigido H1

--- a/css/recursos_humanos.css
+++ b/css/recursos_humanos.css
@@ -32,6 +32,13 @@ h1{
     font-style: normal;
 }
 
+h2{
+    color: black;
+    text-align: center;
+    font-family: "Protest Strike", sans-serif;
+    font-style: normal;
+}
+
 label{
     margin-left: 9px;
 }
