actualizacion responsi de la vista creacion de usuarios

--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -15,7 +15,7 @@
     
 </head>
 <body>
-    <div class="containertarifador">
+    <div class="containertarifador" >
         <div class="menu-dashboard">
             <div class="top-menu">
                 <div class="logo">
@@ -66,8 +66,13 @@
     
             </div>
         </div>
+        <div class="menuUser">
+            <div class="contentperfil">
+                <img src="/img/blank-profile-picture-973460_1280.png" alt="" class="imgperfil">
+            </div>
+        </div>
         <div class="contdatos">
-            <h1>oscar</h1>
+            <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In laborum, facilis necessitatibus similique impedit repellendus consequatur ratione iusto. Culpa sit odit laudantium nam aspernatur, accusantium quos velit quod rerum consequatur.</h1>
         </div>
     </div> 
 </body>
