--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -24,9 +24,43 @@ body {
 
 .containertarifador{
     display: grid;
-    grid:
-        "menu-dashboard contdatos" 1fr / auto 1fr;
-    gap: 8px;
+	grid-template-rows: repeat(10, 1fr);
+	grid-template-columns: repeat(10, 1fr);
+	gap: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.menu-dashboard {
+	grid-area: 1 / 1 / 12 / 2;   
+	background-color: rgba(253,103,9, 0.5);
+}
+
+.menuUser {
+	grid-area: 1 / 2 / 1 / 12;
+    height: 80px;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+}
+
+.contentperfil{
+    position: absolute;
+    left: 90%;
+    
+}
+
+.imgperfil{
+    height: 40px;
+    width: 40px;
+    position: absolute;
+}
+
+.contdatos {
+	grid-area: 1 / 2 / 12 / 12;
+	background-color: rgba(28,67,45, 0.5);
+    margin-top: 80px;
+    min-height: 100vh;
+    background-color: var(--blue-bayoux-100);
 }
 
 .contdatos{
@@ -40,13 +74,15 @@ hr {
 }
 
 .menu-dashboard {
-    width: 150px;
     height: 100vh;
     background: var(--blue-bayoux-700);
     padding: 20px;
     position: relative;
-    transition: max-width .3s ease;
-    box-shadow: 2px 2px 8px 4px #d3d3d3d1;
+    transition: all 0.8s ease;
+}
+
+.menu-dashboard.open{
+    transition: all 0.8s ease;
 }
 
 .top-menu {
@@ -158,9 +194,31 @@ hr {
 
     .containertarifador{
         display: grid;
-        grid:
-            none;
-        gap: 8px;
+        grid-template-rows: repeat(6, 1fr);
+        grid-template-columns: repeat(6, 1fr);
+        gap: 0;
+        width: 100%;
+        height: 100%;
+    }
+    
+    .menu-dashboard {
+        grid-area: 1 / 1 / 7 / 7; 
+    }
+
+    .menuUser {
+        grid-area: 2 / 1 / 2 / 7;
+        background-color: rgba(46,19,30, 0.5);
+        height: 80px;
+        background-color: white;
+        box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+    }
+
+    .contdatos {
+        grid-area: 2 / 1 / 7 / 7;
+        background-color: rgba(28,67,45, 0.5);
+        min-height: 100vh;
+        background-color: var(--blue-bayoux-100);
+    
     }
 
 
@@ -188,7 +246,7 @@ hr {
 
     .menu-dashboard {
         width: 100%;
-        height: 100px;
+        height: 125px;
         flex-direction: column;
     }
 
