--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -40,12 +40,14 @@ body {
 	grid-area: 1 / 2 / 1 / 12;
     height: 80px;
     background-color: white;
+    border-bottom: 4px solid var(--blue-bayoux-700);
     box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
 }
 
 .contentperfil{
     position: absolute;
-    left: 90%;
+    right: 200px;
+    margin-top: 20px;
     
 }
 
@@ -53,6 +55,80 @@ body {
     height: 40px;
     width: 40px;
     position: absolute;
+    border-radius: 30px;
+    border: solid 2px var(--blue-bayoux-700);
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
+}
+
+nav  {
+    position: absolute;
+    right: 80px;
+    margin-top: 30px;
+    height: 100%;
+}
+
+nav ul li{
+    list-style: none;
+}
+
+.perfil{
+    font-family: 'Protest Strike', sans-serif;
+    font-size: 20px;
+    text-decoration: none;
+}
+
+/*SUBMENU*/
+
+.submenu{
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    position: absolute;
+    top: 50px;
+    right: -20px;
+    padding: 14px 0px;
+    visibility: hidden;
+    opacity: 0;
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
+    z-index: 10;
+    transition: all 300ms ease;
+    
+}
+
+.submenu .textsubmenu i {
+    margin-right: 20px;
+    font-size: 14px;
+    
+}
+
+nav:hover .submenu{
+    visibility: visible;
+    opacity: 1;
+    top: 50px;
+}
+
+.textsubmenu{
+    font-family: 'Poppins', sans-serif;
+    display: block;
+    color: var(--blue-bayoux-950);
+    padding: 6px;
+    padding-left: 14px;
+    margin-top: 10px;
+    font-size: 14px;
+    text-transform: uppercase;
+    transition: all 300ms ease;
+    text-decoration: none;
+}
+
+.textsubmenu:hover{
+    background: var(--blue-bayoux-700);
+    color: white;
+    transform: scale(1.1);
+    padding-left: 30px;
+    font-size: 16px;
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
+    
 }
 
 .contdatos {
@@ -61,9 +137,6 @@ body {
     margin-top: 80px;
     min-height: 100vh;
     background-color: var(--blue-bayoux-100);
-}
-
-.contdatos{
     color: #080d28;
     padding: 8px;
 }
@@ -177,18 +250,14 @@ hr {
     width: 300px;
 }
 
-
 .menu-dashboard.open .top-menu .logo span {
     display: block;
 }
-
 
 .enlace.lognup {
     position: absolute;
     bottom: 0px;
 }
-
-
 
 @media only screen and (max-width: 600px) {
 
@@ -202,8 +271,10 @@ hr {
     }
     
     .menu-dashboard {
-        grid-area: 1 / 1 / 7 / 7; 
+        grid-area: 1 / 1 / 1 / 7;
+        height: 150px;
     }
+
 
     .menuUser {
         grid-area: 2 / 1 / 2 / 7;
@@ -211,6 +282,20 @@ hr {
         height: 80px;
         background-color: white;
         box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+    }
+
+    .contentperfil{
+        position: absolute;
+        right: 150px;
+        margin-top: 20px;
+        
+    }
+
+    nav  {
+        position: fixed;
+        right: 50px;
+        margin-top: 30px;
+        height: 100%;
     }
 
     .contdatos {
