--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -70,9 +70,19 @@
             <div class="contentperfil">
                 <img src="/img/blank-profile-picture-973460_1280.png" alt="" class="imgperfil">
             </div>
+                <nav>
+                    <ul class="prueba">
+                        <li><a href="" style="color: black;" class="perfil">Perfil</a><i></i></li>
+                            <ul class="submenu">
+                                <li><a href="" class="textsubmenu"><i class="bx bx-cog"></i>Ajustes</a></li>
+                                <li><a href="" class="textsubmenu"><i class="bx bx-user"></i>Perfil</a></li>
+                                <li><a href="" class="textsubmenu"><i class='bx bx-exit'></i>Salir</a></li>
+                            </ul>
+                    </ul>
+                </nav>
         </div>
         <div class="contdatos">
-            <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In laborum, facilis necessitatibus similique impedit repellendus consequatur ratione iusto. Culpa sit odit laudantium nam aspernatur, accusantium quos velit quod rerum consequatur.</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat neque, facere maiores doloribus, illo minus, odit tempore cupiditate esse consequuntur earum itaque dolore quas. Dolores incidunt voluptatum corporis nam assumenda.</p>
         </div>
     </div> 
 </body>
