--- a/css/gestion_user.css
+++ b/css/gestion_user.css
@@ -12,7 +12,7 @@
 
 /* Estilos generales */
 body {
-    font-family:  'Poppins', sans-serif;
+    font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
     background-color: var(--blue-bayoux-200);
@@ -25,6 +25,7 @@ body {
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    position: relative; /* Establecer posición relativa */
 }
 
 h1 {
@@ -130,7 +131,9 @@ h1 {
 
 /* Estilos para el botón de añadir usuario */
 .add-user {
-    text-align: center;
+    position: absolute; /* Establecer posición absoluta */
+    top: 80px; /* Bajar el botón */
+    right: 20px; /* Alinear con el final del contenedor */
     margin-top: 20px;
 }
 
@@ -155,6 +158,7 @@ h1 {
 .add-user-btn:hover {
     background-color: #218838;
 }
+
 
 /* Estilos para la tabla de usuarios */
 .tabla {
@@ -223,11 +227,8 @@ h1 {
 .modal {
     font-family:'Poppins', sans-serif;
     display: none;
-    /* Ocultar el modal por defecto */
     position: fixed;
-    /* Fijar el modal en la ventana del navegador */
     top: 50%;
-    /* Centrar verticalmente */
     left: 50%;
     /* Centrar horizontalmente */
     transform: translate(-50%, -50%);
@@ -422,28 +423,71 @@ h1 {
 .modal-botones .cancelar_md:hover {
     background-color: #FFB347;
 }
-.modal-botones .guardar-modificacion {
+
+/* Estilos para el botón de guardar-modificacion y cambio_contraseña */
+.modal-botones .guardar-modificacion,
+.modal-botones .cambio_contraseña {
     padding: 10px 20px;
-    /* Espaciado interno */
-    margin: 0 10px;
-    /* Espaciado externo */
+    margin: 10px; /* Ajustar el margen externo para separar los botones */
     border: none;
-    /* Quitar el bord   e */
-    border-radius: 5px;
-    /* Bordes redondeados */
+    border-radius: 8px; /* Hacer los bordes más esquinados */
     cursor: pointer;
-    /* Mostrar el cursor como puntero */
     background-color: var(--blue-bayoux-700);
-    /* Color de fondo */
     color: #fff;
-    /* Color del texto */
     font-size: 16px;
-    /* Tamaño del texto */
     transition: background-color 0.3s ease;
-    /* Transición suave al pasar el ratón */
 }
-.modal-botones .guardar-modificacion:hover {
+
+/* Estilo específico para los botones dentro del modal */
+.modal-botones button,
+.modal-botones a {
+    padding: 10px 20px;
+    margin-top: 20px; /* Ajustamos el margen superior para separar los botones */
+    border: none;
+    border-radius: 8px; /* Hacemos los bordes más esquinados */
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.modal-botones .guardar-modificacion:hover,
+.modal-botones .cambio_contraseña:hover {
     background-color: var(--blue-bayoux-200);
     color: var(--blue-bayoux-900);
 }
     
+/* Estilos para el formulario */
+.form_content {
+    margin-top: 20px;
+    font-family: 'Poppins', sans-serif;
+}
+
+.form_content label {
+    margin-bottom: 5px;
+}
+
+.form_content input[type="email"],
+.form_content select {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    box-sizing: border-box;
+    font-size: 16px;
+    font-family: 'Protest Strike', sans-serif;
+}
+
+.form_content input[type="email"]:focus,
+.form_content select:focus {
+    border-color: var(--blue-bayoux-700);
+}
+
+.form_content input[type="email"]::placeholder,
+.form_content select::placeholder {
+    color: #999;
+}
+
+.form_content input[type="email"]:focus::placeholder,
+.form_content select:focus::placeholder {
+    color: transparent;
+}
