--- a/views/proceso2.html
+++ b/views/proceso2.html
@@ -21,17 +21,17 @@
         <table class="tabla">
             <thead>
                 <tr>
-                    <th>Nombre</th>
-                    <th>Contraseña</th>
-                    <th>Estado</th>
-                    <th>opciones</th>
+                    <th>id</th>
+                    <th>proceso</th>
+                    <th>dias_holguras</th>
+                    <th>Opciones</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td>Nombre del Usuario</td>
-                    <td>Contraseña</td>
-                    <td>Activo</td>
+                    <td>1</td>
+                    <td>EMPAQUE O REEMPAQUE DE INFORMACION EN CAJAS</td>
+                    <td>0</td>
                     <td>
                         <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
                         <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
@@ -75,10 +75,9 @@
                 <div class="modal-botones">
                     <button class="cancelar_md">Cancelar</button>
                     <button class="guardar-modificacion">Guardar</button>
-
                 </div>
-                <div class="modal-botones">
-                    <a href="/views/cambio_admin.html" class="cambio_contraseña">Reseteo de Contraseña</a>
+            </form>
+            
                 </div>
             </form>
         </div>
